--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <header class="menu-mobile container-fluid">
         <div class="row">
 
-            <div class="boton-menu-mobile pos-f-t">
+            <div class="boton-menu-mobile pos-f-t col-xs-4">
                 <div class="collapse" id="navbarToggleExternalContent">
                     <div class="bg-dark p-4 row">
                         <nav class="navBar col-lg-9">
@@ -84,7 +84,7 @@
                 </nav>
             </div>
 
-            <img id="logo-mobile" class="col-lg-5" src="images/logo-fermin.png" alt="logo-fermin">
+            <img id="logo-mobile" class="col-xs-8" src="images/logo-fermin.png" alt="logo-fermin">
 
 
         </div>
@@ -156,14 +156,6 @@
             <div class="div-ora"></div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
 
       <!--
@@ -208,25 +200,25 @@
 
         <div class="row">
 
-            <a class="electricas productos col-lg-12" href="">
+            <a class="electricas productos col-lg-12" href="" data-aos="fade-up">
                 <h2>HERRAMIENTAS ELECTRICAS</h2>
             </a>
 
             <div class="div-ora"></div>
 
-            <a class="iluminacion productos col-lg-6" href="">
+            <a class="iluminacion productos col-lg-6" href="" data-aos="fade-down">
                 <h2>ILUMINACIÓN</h2>
             </a>
             
-            <a class="pintureria productos col-lg-6" href="">
+            <a class="pintureria productos col-lg-6" href="" data-aos="fade-up">
                 <h2>PINTURERIA</h2>
             </a>
 
-            <a class="jardineria productos col-lg-6" href="">
+            <a class="jardineria productos col-lg-6" href="" data-aos="fade-down">
                 <h2>JARDINERÍA</h2>
             </a>
 
-            <a class="herramientas productos col-lg-6" href="">
+            <a class="herramientas productos col-lg-6" href="" data-aos="fade-up">
                 <h2>HERRAMIENTAS DE MANO</h2>
             </a>
 
