--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -65,7 +65,7 @@
                                 <div class="div-thin-white"></div>
                                 <li><a href="../pages/Cómo Comprar.html">Cómo Comprar</a></li>
                                 <div class="div-thin-white"></div>
-                                <li><a href="../pages/Contacto.html">Contacto</a></li>
+                                <li><a href="#">Contacto</a></li>
                                 <div class="div-thin-white"></div>
                             </ul>
                         </nav>
@@ -97,10 +97,10 @@
         </div>
     </div>
 
-    <div class="contacto container-fluid">
+    <div class="contacto container-fluid" data-aos="fade-left">
         <div class="row">
 
-            <div class="redes col-lg-4 container-fluid">
+            <div class="redes col-lg-3 container-fluid">
 
                 <div class="row">
 
@@ -118,7 +118,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-xs-12">
+                    <div class="col-lg-6 col-xs-12">
                         <h3>SEGUINOS EN LAS REDES</h3>
                     </div>
 
@@ -149,7 +149,7 @@
 
 
                     <div class="col-lg-6 col-xs-12 d-flex flex-column">
-                        <div class="row"><img class="col-lg-3 ubicacion" src="../images/ubicacion.png"><span class="col-lg-9">Estamos ubicados en Av. Hipolito Yrigoyen 1234</h4></span>
+                        <div class="row"><img id="ubicacion-contacto" class="col-lg-3 ubicacion" src="../images/ubicacion.png"><span class="col-lg-9">Estamos ubicados en Av. Hipolito Yrigoyen 1234</h4></span>
                         <h4>CÓMO LLEGAR</h4>
                         <ul>
                             <li>-EN COLECTIVO: 160-51-165</li>
@@ -170,7 +170,7 @@
 
     <!--ABRO TRABAJA CON NOSOTROS-->
 
-    <div class="trabaja container-fluid">
+    <div class="trabaja container-fluid" data-aos="fade-up">
         <div class="row">
 
             <h2 class="col-lg-12">FERMIN TE ESTÁ BUSCANDO <br> TRABAJÁ CON NOSOTROS.</h2>
@@ -235,7 +235,7 @@
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="Sobre Nosotros.html">Sobre Nosotros</a></li>
                     <li><a href="Cómo Comprar.html">Cómo Comprar</a></li>
-                    <li><a href="Contacto.html">Contacto</a></li>
+                    <li><a href="#">Contacto</a></li>
                 </ul>
             </div>
 
