--- a/pages/Sobre Nosotros.html
+++ b/pages/Sobre Nosotros.html
@@ -57,13 +57,13 @@
                     <div class="bg-dark p-4 row">
                         <nav class="navBar col-lg-9">
                             <ul class="d-flex flex-column">
-                                <li><a href="#">Inicio</a></li>
+                                <li><a href="../index.html">Inicio</a></li>
                                 <div class="div-thin-white"></div>
-                                <li><a href="../pages/Sobre Nosotros.html">Sobre Nosotros</a></li>
+                                <li><a href="#">Sobre Nosotros</a></li>
                                 <div class="div-thin-white"></div>
-                                <li><a href="../pages/Cómo Comprar.html">Cómo Comprar</a></li>
+                                <li><a href="Cómo Comprar.html">Cómo Comprar</a></li>
                                 <div class="div-thin-white"></div>
-                                <li><a href="../pages/Contacto.html">Contacto</a></li>
+                                <li><a href="Contacto.html">Contacto</a></li>
                                 <div class="div-thin-white"></div>
                             </ul>
                         </nav>
@@ -99,7 +99,7 @@
                 <img src="../images/logo-fermin.png" alt="logo-fermin"> <!--CENTRAR-->
             </div>
 
-            <div class="col-lg-12 col-xs-12 container-fluid">
+            <div class="col-lg-12 col-xs-12 container-fluid" data-aos="fade-up">
 
                 <div class="howWeWork row">
                     <div class="howWeWork-text col-lg-6 col-xs-12">
@@ -123,7 +123,7 @@
 
                 <div class="row">
 
-                    <div class="col-lg-12 container-fluid">
+                    <div class="col-lg-12 container-fluid" data-aos="fade-left">
 
                         <div class="row">
 
@@ -138,7 +138,7 @@
 
                     </div>
 
-                    <div class="col-lg-12 container-fluid container-mision">
+                    <div class="col-lg-12 container-fluid container-mision" data-aos="fade-right">
 
                         <div class="row">
 
@@ -168,7 +168,7 @@
 
         <div class="howWeWork-main row">
 
-            <div class="howWeWork-main-text col-lg-7">
+            <div class="howWeWork-main-text col-lg-7" data-aos="fade-down">
                 <h2>EN FERMIN TRABAJAMOS ASÍ</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum commodi itaque ea fugit quas necessitatibus libero maiores doloribus amet ratione. Unde consectetur porro, fuga aliquid doloribus pariatur distinctio aperiam temporibus!</p>
             </div>
@@ -204,7 +204,7 @@
 
     <div class="how-we-work-ft container-fluid">
 
-        <div>
+        <div data-aos="fade-up">
             
             <div>
                 <h3>CALIDAD</h3>
@@ -217,7 +217,7 @@
 
         <div class="div-green"></div>
 
-        <div>
+        <div data-aos="fade-up">
             <div>
                 <h3>MEDIOS DE PAGO</h3>
                 <img class="icon-howwe" src="../images/payment.png" alt="icon-calidad">
@@ -235,7 +235,7 @@
 
         <div class="div-green"></div>
 
-        <div>
+        <div data-aos="fade-up">
             <div>
                 <h3>ENVIOS</h3>
                 <img class="icon-howwe" src="../images/envios.png" alt="icon-calidad">
@@ -253,7 +253,7 @@
 
         <div class="div-green"></div>
 
-        <div>
+        <div data-aos="fade-up">
             <div>
                 <h3>ATENCIÓN PERSONALIZADA</h3>
                 <img class="icon-howwe" src="../images/atencion.png" alt="icon-calidad">
