carrousel marcas + iframe con ubicacion + email

--- a/index.html
+++ b/index.html
@@ -235,31 +235,45 @@
     <div class="marcas container-fluid">
         <div class="row">
 
-            <h2 class="col-lg-5" data-aos="fade-right">Las mejores marcas <br> del mercado.</h2>
+            <h2 class="col-lg-5 col-xs-12" data-aos="fade-right">Las mejores marcas <br> del mercado.</h2>
 
-            <!--
-
-            <div id="carouselExampleSlidesOnly col-lg-7" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active row">
-                    <div class="d-block w-100 carrousel-marcas">
-                        <img class="col-lg-4" src="..." alt="First slide-1">
-                        <img class="col-lg-4" src="..." alt="First slide-2">
-                        <img class="col-lg-4" src="..." alt="First slide-3">
-                    </div>
+            <div id="carouselExampleSlidesOnly" class="col-lg-7 col-xs-12 carousel slide" data-ride="carousel" data-interval="2000">
+                <div class="carousel-inner container-fluid">
+                  <div class="carousel-item active row flexmarcas">
+                    <img class="col-lg-3 col-xs-3 img-fluid h-50" src="images/marcas/1.jpg" alt="First slide">
+                    <img class="col-lg-3 col-xs-3  img-fluid h-50" src="images/marcas/2.png" alt="First slide">
+                    <img class="col-lg-3 col-xs-3 img-fluid h-50" src="images/marcas/3.jpg" alt="First slide">
+                    <img class="col-lg-2 col-xs-3 img-fluid h-50" src="images/marcas/4.png" alt="First slide">
                   </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="..." alt="Second slide">
+                  <div class="carousel-item row flexmarcas">
+                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/5.jpg" alt="First slide">
+                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/6.jpg" alt="First slide">
+                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/7.png" alt="First slide">
+                    <img class="col-lg-2 img-fluid h-50" src="images/marcas/8.png" alt="First slide">
                   </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="..." alt="Third slide">
+                  <div class="carousel-item row flexmarcas">
+                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/10.png" alt="First slide">
+                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/11.png" alt="First slide">
+                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/12.png" alt="First slide">
+                    <img class="col-lg-2 img-fluid h-50" src="images/marcas/13.png" alt="First slide">
+                  </div>
+                  <div class="carousel-item row flexmarcas">
+                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/14.png" alt="First slide">
+                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/15.jpg" alt="First slide">
+                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/16.png" alt="First slide">
+                    <img class="col-lg-2 img-fluid h-50" src="images/marcas/17.png" alt="First slide">
+                  </div>
+                  <div class="carousel-item row flexmarcas">
+                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/18.jpg" alt="First slide">
+                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/19.png" alt="First slide">
+                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/9.jpg" alt="First slide">
+                    <img class="col-lg-2 img-fluid h-50" src="images/marcas/17.png" alt="First slide">
                   </div>
                 </div>
+                
               </div>
 
-            -->
-
-            <img id="marcas" class="col-lg-7" src="images/nuestras_marcas.jpg" alt="marcas">    
+            <!--<img id="marcas" class="col-lg-7" src="images/nuestras_marcas.jpg" alt="marcas">    -->
 
         </div>
     </div>
@@ -306,11 +320,11 @@
                 <a href="#"><img src="images/logo-fermin.png" class="fermin-footer" alt="logo-fermin"></a>
             </div>
 
-            <div class="col-lg-3 col-xs-12">
+            <div class="iframefooter col-lg-3 col-xs-12">
 
-                <span><img src="images/ubicacion.png" class="ubicacion"></span><span>Estamos en Av. Siempre Viva 123</span>
+                <span><img src="images/ubicacion.png" class="ubicacion"></span><span>Estamos en Pje. Sarmiento 909, Temperley.</span>
 
-                <iframe class="iframe" src="https://maps.google.com/?ll=23.135249,-82.359685&z=14&t=m&output=embed" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2755.429840177248!2d-58.408712657500104!3d-34.78639459127776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd3d6998a87cf%3A0x2755ca9805142b4f!2sFerm%C3%ADn%20Ferreteria!5e0!3m2!1ses-419!2sar!4v1636850514491!5m2!1ses-419!2sar" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
             </div>
 
@@ -319,10 +333,10 @@
                     CONTACTO
                 </h3>
 
-                <ul>
+                <ul class="contacto-footer">
                     <li>TELEFONO-1</li>
                     <li>TELEFONO-2</li>
-                    <li>EMAIL</li>
+                    <li>ferminferreteria@gmail.com</li>
                 </ul>
             </div>
             
