--- a/pages/Sobre Nosotros.html
+++ b/pages/Sobre Nosotros.html
@@ -312,12 +312,11 @@
                 <a href="#"><img src="../images/logo-fermin.png" class="fermin-footer" alt="logo-fermin"></a>
             </div>
 
-            <div class="col-lg-3">
+            <div class="iframefooter col-lg-3">
 
-                <span><img src="../images/ubicacion.png" class="ubicacion"></span><span>Estamos en Av. Siempre Viva 123</span>
+                <span><img src="../images/ubicacion.png" class="ubicacion"></span><span>Estamos en Pje. Sarmiento 909, Temperley.</span>
 
-                <iframe class="iframe" src="https://maps.google.com/?ll=23.135249,-82.359685&z=14&t=m&output=embed" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2755.429840177248!2d-58.408712657500104!3d-34.78639459127776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd3d6998a87cf%3A0x2755ca9805142b4f!2sFerm%C3%ADn%20Ferreteria!5e0!3m2!1ses-419!2sar!4v1636850514491!5m2!1ses-419!2sar" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
             <div class="divFooter col-lg-2">
@@ -325,10 +324,10 @@
                     CONTACTO
                 </h3>
 
-                <ul>
+                <ul class="contacto-footer">
                     <li>TELEFONO-1</li>
                     <li>TELEFONO-2</li>
-                    <li>EMAIL</li>
+                    <li>ferminferreteria@gmail.com</li>
                 </ul>
             </div>
             
