--- a/index.html
+++ b/index.html
@@ -240,34 +240,35 @@
             <div id="carouselExampleSlidesOnly" class="col-lg-7 col-xs-12 carousel slide" data-ride="carousel" data-interval="2000">
                 <div class="carousel-inner container-fluid">
                   <div class="carousel-item active row flexmarcas">
-                    <img class="col-lg-3 col-xs-3 img-fluid h-50" src="images/marcas/1.jpg" alt="First slide">
-                    <img class="col-lg-3 col-xs-3  img-fluid h-50" src="images/marcas/2.png" alt="First slide">
-                    <img class="col-lg-3 col-xs-3 img-fluid h-50" src="images/marcas/3.jpg" alt="First slide">
-                    <img class="col-lg-2 col-xs-3 img-fluid h-50" src="images/marcas/4.png" alt="First slide">
+                    <img class="col-lg-3 col-xs-3 h-50" src="images/marcas/1.jpg" alt="First slide">
+                    <img class="col-lg-3 col-xs-3 h-50" src="images/marcas/2.png" alt="First slide">
+                    <img class="col-lg-3 col-xs-3 h-50" src="images/marcas/3.jpg" alt="First slide">
+                    <img class="col-lg-2 col-xs-3 h-50" src="images/marcas/4.png" alt="First slide">
                   </div>
                   <div class="carousel-item row flexmarcas">
-                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/5.jpg" alt="First slide">
-                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/6.jpg" alt="First slide">
-                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/7.png" alt="First slide">
-                    <img class="col-lg-2 img-fluid h-50" src="images/marcas/8.png" alt="First slide">
+                    <img class="col-lg-3 col-xs-3 h-50" src="images/marcas/5.jpg" alt="First slide">
+                    <img class="col-lg-3 col-xs-3  h-50" src="images/marcas/6.jpg" alt="First slide">
+                    <img class="col-lg-3 col-xs-3  h-50" src="images/marcas/7.png" alt="First slide">
+                    <img class="col-lg-2 col-xs-3  h-50" src="images/marcas/8.png" alt="First slide">
                   </div>
                   <div class="carousel-item row flexmarcas">
-                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/10.png" alt="First slide">
-                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/11.png" alt="First slide">
-                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/12.png" alt="First slide">
-                    <img class="col-lg-2 img-fluid h-50" src="images/marcas/13.png" alt="First slide">
+                    <img class="col-lg-3 col-xs-3 h-50" src="images/marcas/10.png" alt="First slide">
+                    <img class="col-lg-3 col-xs-3  h-50" src="images/marcas/11.png" alt="First slide">
+                    <img class="col-lg-3 col-xs-3  h-50" src="images/marcas/12.png" alt="First slide">
+                    <img class="col-lg-2 col-xs-3  h-50" src="images/marcas/13.png" alt="First slide">
+                  </div>
+                  
+                  <div class="carousel-item row flexmarcas">
+                    <img class="col-lg-3 col-xs-3 h-50" src="images/marcas/14.png" alt="First slide">
+                    <img class="col-lg-3 col-xs-3 h-50" src="images/marcas/15.jpg" alt="First slide">
+                    <img class="col-lg-3 col-xs-3  h-50" src="images/marcas/16.png" alt="First slide">
+                    <img class="col-lg-2 col-xs-3 h-50" src="images/marcas/17.png" alt="First slide">
                   </div>
                   <div class="carousel-item row flexmarcas">
-                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/14.png" alt="First slide">
-                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/15.jpg" alt="First slide">
-                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/16.png" alt="First slide">
-                    <img class="col-lg-2 img-fluid h-50" src="images/marcas/17.png" alt="First slide">
-                  </div>
-                  <div class="carousel-item row flexmarcas">
-                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/18.jpg" alt="First slide">
-                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/19.png" alt="First slide">
-                    <img class="col-lg-3 img-fluid h-50" src="images/marcas/9.jpg" alt="First slide">
-                    <img class="col-lg-2 img-fluid h-50" src="images/marcas/17.png" alt="First slide">
+                    <img class="col-lg-3 col-xs-3  h-50" src="images/marcas/18.jpg" alt="First slide">
+                    <img class="col-lg-3 col-xs-3  h-50" src="images/marcas/19.png" alt="First slide">
+                    <img class="col-lg-3 col-xs-3 h-50" src="images/marcas/9.jpg" alt="First slide">
+                    <img class="col-lg-2 col-xs-3 h-50" src="images/marcas/17.png" alt="First slide">
                   </div>
                 </div>
                 
