--- a/pages/Cómo Comprar.html
+++ b/pages/Cómo Comprar.html
@@ -39,8 +39,8 @@
             </nav>
 
             <div class="redesMain col-lg-2 d-flex flex-row">
-                <div><a><img src="../images/facebook-2.png" alt="logo-ig"></a></div>
-                <div><a><img src="../images/instagram.png" alt="logo-fb"></a></div>
+                <div><a target="_blank" href="https://www.facebook.com/profile.php?id=100074889818665"><img src="../images/facebook-2.png" alt="logo-ig"></a></div>
+                <div><a href="https://www.instagram.com/ferminferreteria/?hl=es" target="_blank"><img src="../images/instagram.png" alt="logo-fb"></a></div>
                 <div><a><img src="../images/wpp-1.png" alt="logo-wpp"></a></div>
             </div>
 
@@ -70,8 +70,8 @@
                         </nav>
             
                         <div class="redesMain col-lg-2 d-flex flex-row">
-                            <div><a><img src="../images/facebook-2.png" alt="logo-ig"></a></div>
-                            <div><a><img src="../images/instagram.png" alt="logo-fb"></a></div>
+                            <div><a target="_blank" href="https://www.facebook.com/profile.php?id=100074889818665"><img src="../images/facebook-2.png" alt="logo-ig"></a></div>
+                            <div><a href="https://www.instagram.com/ferminferreteria/?hl=es" target="_blank"><img src="../images/instagram.png" alt="logo-fb"></a></div>
                             <div><a><img src="../images/wpp-1.png" alt="logo-wpp"></a></div>
                         </div>
                     </div>
@@ -231,8 +231,8 @@
                 </h3>
 
                 <div class= d-inline-flex>
-                    <div><a><img src="../images/insta-verde.png" alt="logo-ig"></a></div>
-                    <div><a><img src="../images/face-verde.png" alt="logo-fb"></a></div>
+                    <div><a href="https://www.instagram.com/ferminferreteria/?hl=es" target="_blank"><img src="../images/insta-verde.png" alt="logo-ig"></a></div>
+                    <div><a target="_blank" href="https://www.facebook.com/profile.php?id=100074889818665"><img src="../images/face-verde.png" alt="logo-fb"></a></div>
                     <div><a><img src="../images/wpp-verde.png" alt="logo-wpp"></a></div>
                 </div>
             </div>
